@@ -103,3 +103,4 @@ Changes between Qt3 and Qt4 port (to be completed)
 - fixed more icons
     memory.png -> network-connect
     gplink.png -> merge
+- fixed signal TextDocument::slotSelectionmChanged() -> KTextEditor::View::slotSelectionmChanged(KTextEditor::View*)
